13: delete old drive-read route
